; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_extension.c_RemoveExtensionById.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_extension.c_RemoveExtensionById.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@CurrentExtensionObject = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [56 x i8] c"cannot drop extension \22%s\22 because it is being modified\00", align 1
@ExtensionRelationId = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@Anum_pg_extension_oid = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_OIDEQ = common dso_local global i32 0, align 4
@ExtensionOidIndexId = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RemoveExtensionById(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca [1 x i32], align 4
  store i64 %0, i64* %2, align 8
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @CurrentExtensionObject, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %18

10:                                               ; preds = %1
  %11 = load i32, i32* @ERROR, align 4
  %12 = load i32, i32* @ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE, align 4
  %13 = call i32 @errcode(i32 %12)
  %14 = load i64, i64* %2, align 8
  %15 = call i32 @get_extension_name(i64 %14)
  %16 = call i32 @errmsg(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = call i32 @ereport(i32 %11, i32 %16)
  br label %18

18:                                               ; preds = %10, %1
  %19 = load i32, i32* @ExtensionRelationId, align 4
  %20 = load i32, i32* @RowExclusiveLock, align 4
  %21 = call i32 @table_open(i32 %19, i32 %20)
  store i32 %21, i32* %3, align 4
  %22 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %23 = load i32, i32* @Anum_pg_extension_oid, align 4
  %24 = load i32, i32* @BTEqualStrategyNumber, align 4
  %25 = load i32, i32* @F_OIDEQ, align 4
  %26 = load i64, i64* %2, align 8
  %27 = call i32 @ObjectIdGetDatum(i64 %26)
  %28 = call i32 @ScanKeyInit(i32* %22, i32 %23, i32 %24, i32 %25, i32 %27)
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* @ExtensionOidIndexId, align 4
  %31 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %32 = call i32 @systable_beginscan(i32 %29, i32 %30, i32 1, i32* null, i32 1, i32* %31)
  store i32 %32, i32* %4, align 4
  %33 = load i32, i32* %4, align 4
  %34 = call %struct.TYPE_4__* @systable_getnext(i32 %33)
  store %struct.TYPE_4__* %34, %struct.TYPE_4__** %5, align 8
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %36 = call i64 @HeapTupleIsValid(%struct.TYPE_4__* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %18
  %39 = load i32, i32* %3, align 4
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = call i32 @CatalogTupleDelete(i32 %39, i32* %41)
  br label %43

43:                                               ; preds = %38, %18
  %44 = load i32, i32* %4, align 4
  %45 = call i32 @systable_endscan(i32 %44)
  %46 = load i32, i32* %3, align 4
  %47 = load i32, i32* @RowExclusiveLock, align 4
  %48 = call i32 @table_close(i32 %46, i32 %47)
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @get_extension_name(i64) #1

declare dso_local i32 @table_open(i32, i32) #1

declare dso_local i32 @ScanKeyInit(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i64) #1

declare dso_local i32 @systable_beginscan(i32, i32, i32, i32*, i32, i32*) #1

declare dso_local %struct.TYPE_4__* @systable_getnext(i32) #1

declare dso_local i64 @HeapTupleIsValid(%struct.TYPE_4__*) #1

declare dso_local i32 @CatalogTupleDelete(i32, i32*) #1

declare dso_local i32 @systable_endscan(i32) #1

declare dso_local i32 @table_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
